deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whatsmyip
  labels:
    app: whatsmyip
spec:
  selector:
    app: whatsmyip
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  type: ClusterIP
