deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whatsmyip
spec:
  rules:
  - host: whatsmyip.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whatsmyip
            port:
              number: 8080
